--- a/commandes/src/main/resources/application.properties
+++ b/commandes/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+logging.level.root=INFO
+server.port=8088
+spring.application.name=COMMANDES-SERVICE
+spring.h2.console.enabled=true
+#spring.cloud.discovery.enabled=true
+#pour dire a discovry service de ne pas publier le service avec le nom de la machine mais avec l'ip du service
 
