client user interfaces et client feigne

--- a/clientui/pom.xml
+++ b/clientui/pom.xml
@@ -44,7 +44,8 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.7.RELEASE</version>
         </dependency>
 
     </dependencies>
