--- a/clientui/pom.xml
+++ b/clientui/pom.xml
@@ -48,6 +48,12 @@
             <version>1.4.7.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.5.12</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
