centraliser la config dans depot distant

--- a/produitsMs/src/main/resources/application.properties
+++ b/produitsMs/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-logging.level.root=INFO
-server.port=8087
-spring.application.name=PRODUIT-SERVICE
-spring.h2.console.enabled=true
-spring.cloud.discovery.enabled=true
+#logging.level.root=INFO
+#server.port=8087
+#spring.application.name=PRODUIT-SERVICE
+#Configurations H2
+#spring.jpa.show-sql=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=none
+
+#spring.cloud.discovery.enabled=true
 #pour dire a discovry service de ne pas publier le service avec le nom de la machine mais avec l'ip du service
 
+#Nos configurations
+#mes-configs.limitDeProduits= 4
